--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     height: 58px;
     width: 184px;
     /* margin: 60px; */
-    margin: 10px;
+    margin: 20px;
   }
   
   .radio-wrapper .input {
@@ -217,64 +217,64 @@
     line-height: 6.2px;
   }
 
-.card1 {
-  position: relative;
-  width: 100%;
-  height: 70vh;
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-  border-radius: 10px;
+
+/*end*/
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+.cards .red {
+  background-color: #e61818;
+}
+
+.cards .red1 {
+  background-color: #e61818;
+}
+
+.cards .red2 {
+  background-color: #e61818;
+}
+
+
+.cards .purple {
+  background-color: #6619bd;
+}
+
+.cards .green {
+  background-color: #18cd5e;
+}
+
+.cards .card {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  flex-direction: column;
+  text-align: center;
+  height: 300px;
+  width: 300px;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  transition: 400ms;
 }
 
-.card1 svg {
-  width: 48px;
-  fill: #333;
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-}
-
-.card1:hover {
-  transform: rotate(-5deg) scale(1.1);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
-.card1__content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-45deg);
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: #fff;
-  opacity: 0;
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-}
-
-.card1:hover .card1__content {
-  transform: translate(-50%, -50%) rotate(0deg);
-  opacity: 1;
-}
-
-.card1__title {
-  margin: 0;
-  font-size: 24px;
-  color: #333;
+.cards .card p.tip {
+  font-size: 1em;
   font-weight: 700;
 }
 
-.card1__description {
-  margin: 10px 0 0;
-  font-size: 14px;
-  color: #777;
-  line-height: 1.4;
+.cards .card p.second-text {
+  font-size: .7em;
 }
 
-.card1:hover svg {
-  scale: 0;
-  transform: rotate(-45deg);
+.cards .card:hover {
+  transform: scale(1.2, 1.2);
+}
+
+.cards:hover > .card:not(:hover) {
+  filter: blur(1000px);
+  transform: scale(0.9, 0.9);
 }
