--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   .radio-wrapper {
     position: relative;
     height: 58px;
-    width: 184px;
+    width: 20%;
+    /* width: 184px; */
     /* margin: 60px; */
     margin: 20px;
   }
@@ -222,7 +223,7 @@
 
 .cards {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 50px;
 }
 
@@ -254,7 +255,7 @@
   flex-direction: column;
   text-align: center;
   height: 300px;
-  width: 300px;
+  /* width: 300px; */
   border-radius: 10px;
   color: white;
   cursor: pointer;
@@ -270,11 +271,16 @@
   font-size: .7em;
 }
 
-.cards .card:hover {
+/* .cards .card:hover {
   transform: scale(1.2, 1.2);
 }
 
 .cards:hover > .card:not(:hover) {
   filter: blur(1000px);
   transform: scale(0.9, 0.9);
+} */
+
+.image {
+  height: 100%;
+  width: 100%;
 }
